maze.lessons.maze.island.IslandMaze.scala.error
Escaper:7: error: not found: value faceMur
      if (faceMur){
          ^