maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
  while (!estSurBiscuit){
    setDirection(Direction.NORTH)
    if (estFaceMur){
      droite()
      if (faceMur){
        droite()
        avance()
        gauche()
      }
    }else{
      avance()
    }
  }
  prendBiscuit()
}